--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -325,47 +325,47 @@
                     const tagifyInstance = initializeTagify(inputElement, architectureList);
 
                     // Set custom texts for validation messages
-                    tagifyInstance.settings.texts = {
-                        duplicate: "Duplicates are not allowed",
-                        empty: "Architecture is required",
-                    };
+                    // tagifyInstance.settings.texts = {
+                    //     duplicate: "Duplicates are not allowed",
+                    //     empty: "Architecture is required",
+                    // };
 
                     // Implement custom validation using the validate setting
-                    tagifyInstance.settings.validate = function(tagData) {
-                        if (tagData.value.trim() === "") {
-                            return tagifyInstance.TEXTS.empty;
-                        }
+                    // tagifyInstance.settings.validate = function(tagData) {
+                    //     if (tagData.value.trim() === "") {
+                    //         return tagifyInstance.TEXTS.empty;
+                    //     }
+                    //
+                    //     const isDuplicate = tagifyInstance.value.some((tag) => tag.value === tagData.value);
+                    //     if (isDuplicate) {
+                    //         return tagifyInstance.TEXTS.duplicate;
+                    //     }
+                    //
+                    //     return true;
+                    // };
 
-                        const isDuplicate = tagifyInstance.value.some((tag) => tag.value === tagData.value);
-                        if (isDuplicate) {
-                            return tagifyInstance.TEXTS.duplicate;
-                        }
-
-                        return true;
-                    };
-
-                    $("#validation-form").submit(function (event) {
-                        // Handle the architectures input
-                        const arch = tagifyInstance.value;
-
-                        if (arch.length !== 0) {
-                            const whitelist = tagifyInstance.settings.whitelist;
-                            arch.forEach((item) => {
-                                if (!whitelist.includes(item.value)) {
-                                    whitelist.push(item.value);
-                                }
-                            });
-                        }
-
-                        // Display validation errors
-                        const validationErrors = tagifyInstance.validateTag();
-                        if (validationErrors.length > 0) {
-                            alert(validationErrors.join('\n'));
-                        } else {
-                            // Continue with form submission
-                            console.log("Form submitted successfully!");
-                        }
-                    });
+                    // $("#validation-form").submit(function (event) {
+                    //     // Handle the architectures input
+                    //     const arch = tagifyInstance.value;
+                    //
+                    //     if (arch.length !== 0) {
+                    //         const whitelist = tagifyInstance.settings.whitelist;
+                    //         arch.forEach((item) => {
+                    //             if (!whitelist.includes(item.value)) {
+                    //                 whitelist.push(item.value);
+                    //             }
+                    //         });
+                    //     }
+                    //
+                    //     // Display validation errors
+                    //     const validationErrors = tagifyInstance.validateTag();
+                    //     if (validationErrors.length > 0) {
+                    //         alert(validationErrors.join('\n'));
+                    //     } else {
+                    //         // Continue with form submission
+                    //         console.log("Form submitted successfully!");
+                    //     }
+                    // });
                 } catch (error) {
                     console.log("Error:", error);
                 }
@@ -1077,75 +1077,79 @@
 
                     const currentProejctDetail = await getData(`/api/project/list/${id}`);
 
-                    document.querySelector("#updateButton").addEventListener("click", function () {
-                        const internalReviewCount =
-                            document.getElementById(
-                                "project-internal-review-count"
-                            ).value;
-                        const externalReviewCount =
-                            document.getElementById(
-                                "project-external-review-count"
-                            ).value;
-                        const data = {
-                            internal_review_count: internalReviewCount,
-                            external_review_count: externalReviewCount,
-                        };
-                        fetch(
-                            "/api/review/update-review/" +
-                            currentProejctDetail.id,
-                            {
-                                method: "PUT",
-                                headers: {
-                                    "Content-Type": "application/json",
-                                },
-                                body: JSON.stringify(data),
-                            }
-                        )
-                            .then((response) => response.json())
-                            .then((data) => {
-                                console.log(
-                                    "Review counts updated successfully:",
-                                    data
-                                );
-                            })
-                            .catch((error) => {
-                                console.error(
-                                    "Error updating review counts:",
-                                    error
-                                );
-                            });
-                    });
+                    if (loginUser.currentUser.role === "PROJECT_MANAGER") {
 
-                    document.querySelector("#updateButtonDeli").addEventListener("click", async function () {
-
-                        let deliverableList = [];
-
-                        currentProejctDetail.deliverableDto.forEach(a => {
-                            const checkbox = document.querySelector(`#checkbox-${a.id}`);
-
-                            if (checkbox.checked) {
-                                deliverableList.push({ id: a.id, status: true });
-                            }
+                        document.querySelector("#updateButton").addEventListener("click", function () {
+                            const internalReviewCount =
+                                document.getElementById(
+                                    "project-internal-review-count"
+                                ).value;
+                            const externalReviewCount =
+                                document.getElementById(
+                                    "project-external-review-count"
+                                ).value;
+                            const data = {
+                                internal_review_count: internalReviewCount,
+                                external_review_count: externalReviewCount,
+                            };
+                            fetch(
+                                "/api/review/update-review/" +
+                                currentProejctDetail.id,
+                                {
+                                    method: "PUT",
+                                    headers: {
+                                        "Content-Type": "application/json",
+                                    },
+                                    body: JSON.stringify(data),
+                                }
+                            )
+                                .then((response) => response.json())
+                                .then((data) => {
+                                    console.log(
+                                        "Review counts updated successfully:",
+                                        data
+                                    );
+                                })
+                                .catch((error) => {
+                                    console.error(
+                                        "Error updating review counts:",
+                                        error
+                                    );
+                                });
                         });
 
-                        console.log("deliverable", deliverableList);
 
-                        fetch(`/api/deliverable/update-status`, {
-                            method: 'PUT',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(deliverableList),
-                        })
-                            .then(response => response.json())
-                            .then(data => {
-                                console.log('Status updated successfully:', data);
-                            })
-                            .catch(error => {
-                                console.error('Error updating status:', error);
+                        document.querySelector("#updateButtonDeli").addEventListener("click", async function () {
+
+                            let deliverableList = [];
+
+                            currentProejctDetail.deliverableDto.forEach(a => {
+                                const checkbox = document.querySelector(`#checkbox-${a.id}`);
+
+                                if (checkbox.checked) {
+                                    deliverableList.push({id: a.id, status: true});
+                                }
                             });
-                    });
 
+                            console.log("deliverable", deliverableList);
+
+                            fetch(`/api/deliverable/update-status`, {
+                                method: 'PUT',
+                                headers: {
+                                    'Content-Type': 'application/json',
+                                },
+                                body: JSON.stringify(deliverableList),
+                            })
+                                .then(response => response.json())
+                                .then(data => {
+                                    console.log('Status updated successfully:', data);
+                                })
+                                .catch(error => {
+                                    console.error('Error updating status:', error);
+                                });
+                        });
+
+                    }
                     console.log(currentProejctDetail)
 
                     document.querySelector(
@@ -2131,15 +2135,7 @@
                     console.log(empList);
                     console.log(deliverTypeList);
 
-                    Swal.fire({
-                        title: "Are you sure want to edit?",
-                        icon: "warning",
-                        showCancelButton: true,
-                        confirmButtonColor: "#3085d6",
-                        cancelButtonColor: "#d33",
-                        confirmButtonText: "Yes",
-                    }).then((result) => {
-                        if (result.isConfirmed) {
+
                             const project = {
                                 name: projectName,
                                 clientDto: client,
@@ -2197,8 +2193,7 @@
                                     alert("Error registering project");
                                 },
                             });
-                        }
-                    });
+
                 });
             });
             
