--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -17,7 +17,7 @@
             <div class="navbar-nav w-100 gap-2">
                 <a th:href="@{/dashboard}" class="nav-item nav-link "><i
                         class="bi bi-clipboard-data-fill me-1"></i>Dashboard</a>
-                <a th:href="@{/department}" class="nav-item nav-link" sec:authorize="hasAnyRole('PMO','DEPARTMENT_HEAD','SDQC')"><i
+                <a th:href="@{/department}" class="nav-item nav-link" sec:authorize="hasAnyRole('PMO','SDQC')"><i
                         class="fa-solid fa-building" ></i>Department</a>
                 <a th:href="@{/project/all}" class="nav-item nav-link"><i class="bi bi-collection-fill me-1"></i>All
                     Projects</a>
