--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -118,10 +118,10 @@
                                     name="password"
                                     data-type="password"
                             />
-
                             <label for="floatingPassword"
                             >Password</label
                             >
+                            <button type="button" id="btnToggle" class="toggle"><i id="eyeIcon" class="fa fa-eye"></i></button>
                         </div>
                         <div
                                 class="d-flex align-items-center justify-content-between mb-4"
@@ -182,7 +182,6 @@
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
-<script src="/js/forprogresscircleiguess.js"></script>
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
