logout user if disabled and hide issue solve button if the role is not project manager

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -1238,13 +1238,11 @@
                                 ${issue.solved === true ? 'Closed' : 'Open'}
                             </span>
                         </div>
-                        <button
-                            type="button"
-                            class="btn btn-info see-more-button text-white"
-                            data-id="${issue.id}"
-                        >
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </button>
+                        ${currentLoginUserRole === "PROJECT_MANAGER" ? 
+                        '<button type="button" class="btn btn-info see-more-button text-white" data-id="${issue.id}">' +
+                            '<i class="fa-solid fa-pen-to-square"></i>' +
+                        '</button>' 
+                        :''}
                     </div>
                 </div>
                 <div class="col issue-time-line d-flex gap-4 flex-wrap">
